added new component CharactersHouses

--- a/src/App.css
+++ b/src/App.css
@@ -27,13 +27,19 @@
   background-image: url("./images/hogwartsBackground.jpg");
 }
 
+
+
 .generalText {
   font-size: 23px;
   font-family: 'Niconne', cursive;
-  color: #F6F2F1;
+  color: #F3DE85;
 }
 
 .question {
   font-size: 40px;
   /* color: #ECCC3B; */
+}
+
+.buttonStyling {
+  color: #F3DE85;
 }
