--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,16 @@ body {
   color: #F3DE85;
 }
 
+.charactersGrid {
+  border-style: solid;
+  border-color: #F3DE85;
+  font-size: 15px;
+  padding: 20px;
+}
+
+p, h4 {
+  margin: 10px;
+  padding: 5px;
+  content: 5px;
+  background-color: #153B73;
+}
